# CyberSocial

./: .gitignore  README.md  pyproject.toml  repomix-output.xml  requirements.txt
.omx/: metrics.json  notepad.md
.omx/context/: cyber-social-bilingual-ui-20260407T102159Z.md  cyber-social-feed-redesign-20260407T114023Z.md  cyber-social-mvp-20260406T131347Z.md  cyber-social-runtime-v1-20260406T151829Z.md  cyber-social-runtime-v1-5-attention-engagement-20260407T075121Z.md  cyber-social-runtime-v1-5-behavior-smoke-20260407T085343Z.md  cyber-social-runtime-v2-real-llm-20260407T142032Z.md
.omx/logs/: notify-fallback-2026-04-06.jsonl  notify-hook-2026-04-06.jsonl  notify-hook-2026-04-07.jsonl  notify-hook-2026-04-08.jsonl  omx-2026-04-06.jsonl  team-dispatch-2026-04-06.jsonl  tmux-hook-2026-04-06.jsonl  tmux-hook-2026-04-07.jsonl  tmux-hook-2026-04-08.jsonl  turns-2026-04-06.jsonl  turns-2026-04-07.jsonl  turns-2026-04-08.jsonl
.omx/plans/: plan-cyber-social-runtime-v1.md  plan-cyber-social.md  prd-cyber-social-runtime-v1.md  prd-cyber-social.md  test-spec-cyber-social-runtime-v1.md  test-spec-cyber-social.md
.omx/state/: dispatch.json  hud-state.json  leader-runtime-activity.json  notify-fallback-authority-owner.json  notify-fallback-state.json  notify-hook-state.json  ralph-last-steer-at  ralph-progress.json  ralph-state.json  session.json  (+4 more)
app/: __init__.py  config.py  db.py  i18n.py  main.py  models.py  presentation.py  schemas.py  seed.py
data/: cyber_social.db
scripts/: start-managed-omx.ps1
tests/: conftest.py  test_app.py  test_runtime.py  test_services.py
(+54 files in other folders)
