[project]
name = "cyber_social"
version = "0.1.0"
description = "本地优先、单体架构的 Agent 论坛演示产品"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116,<1.0",
    "uvicorn[standard]>=0.35,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.12,<1.0",
    "httpx>=0.28,<1.0",
    "litellm>=1.67,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]